--- a/.github/workflows/wzxy_healthcheck.yml
+++ b/.github/workflows/wzxy_healthcheck.yml
@@ -55,6 +55,10 @@ jobs:
         WZXY_AREACODE: ${{secrets.AREACODE}}
         WZXY_TOWNCODE: ${{secrets.TOWNCODE}}
         WZXY_CITYCODE: ${{secrets.CITYCODE}}
+        TEMPLATE_ID: ${{secrets.TEMPLATE_ID}}
+        APP_SECRET: ${{secrets.APP_SECRET}}
+        TO_USER: ${{secrets.TO_USER}}
+
       run: python wzxy-healthcheck.py
 
   ## 多账户配置示例，请复制下面的代码后取消注释再修改，粘贴时注意缩进
