--- a/.github/workflows/wzxy_healthcheck.yml
+++ b/.github/workflows/wzxy_healthcheck.yml
@@ -61,7 +61,10 @@ jobs:
         TO_USER: ${{secrets.TO_USER}}
 
       run: python wzxy-healthcheck.py
-
+           echo -n `date +%Y-%m-%d\ %H:%M:%S`\ -\ >> ./run.log 
+           tail run.log #避免日志上传失败丢失日志
+        
+        
   ## 多账户配置示例，请复制下面的代码后取消注释再修改，粘贴时注意缩进
   # USER_02:    ## Jobs名，注意修改序号
   #   runs-on: ubuntu-latest
