--- a/.github/工作流/wzxy_healthcheck.yml
+++ b/.github/工作流/wzxy_healthcheck.yml
@@ -60,9 +60,10 @@ jobs:
         APP_SECRET: ${{secrets.APP_SECRET}}
         TO_USER: ${{secrets.TO_USER}}
 
-      run: python wzxy-healthcheck.py
+      run: |
+           python wzxy-healthcheck.py
            echo -n `date +%Y-%m-%d\ %H:%M:%S`\ -\ >> ./run.log 
-           tail run.log #避免日志上传失败丢失日志
+           tail run.log  
         
         
   ## 多账户配置示例，请复制下面的代码后取消注释再修改，粘贴时注意缩进
